--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,5 +1,5 @@
 default_language_version:
-  python: python3.10
+  python: python3.9
 repos:
   - repo: https://github.com/pre-commit/pre-commit-hooks
     rev: v4.5.0
@@ -14,20 +14,25 @@ repos:
   - repo: https://github.com/pycqa/flake8
     rev: 6.1.0
     hooks:
-    - id: flake8
-      args: ["--max-line-length=180","--extend-ignore=E203","--per-file-ignores=.github/scripts/bump_version.py:E402"]
+      - id: flake8
+        args:
+          [
+            "--max-line-length=180",
+            "--extend-ignore=E203",
+            "--per-file-ignores=.github/scripts/bump_version.py:E402",
+          ]
   - repo: https://github.com/ambv/black
     rev: 23.10.1
     hooks:
-    - id: black
-      args: [--line-length=130]
-      additional_dependencies: ['click==8.0.4']
+      - id: black
+        args: [--line-length=130]
+        additional_dependencies: ["click==8.0.4"]
   - repo: https://github.com/pycqa/isort
     rev: 5.12.0
     hooks:
-    - id: isort
-      name: isort
-      args: [--line-length=130]
+      - id: isort
+        name: isort
+        args: [--line-length=130]
   - repo: local
     hooks:
       - id: jupyter-nb-clear-output
