--- a/streamlit_pianoroll/frontend/package.json
+++ b/streamlit_pianoroll/frontend/package.json
@@ -11,6 +11,8 @@
   },
   "scripts": {
     "start": "react-scripts start",
+    "start-win": "set PORT=3210 && react-scripts start",
+    "start-unix": "PORT=3210 react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
